--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,12 @@ tokio = { version = "1.0", features = ["full"] }
 serde_json = "1.0"
 anyhow = "1.0"
 futures = "0.3"
+
+[package.metadata.release]
+sign-commit = false
+sign-tag = false
+pre-release-replacements = [
+  {file = "src/main.rs", search = "\"version\": \"[0-9]+\\.[0-9]+\\.[0-9]+\"", replace = "\"version\": \"{{version}}\""},
+]
+pre-release-commit-message = "Release v{{version}}"
+tag-message = "Release v{{version}}"
