chore: fix GitHub Actions permissions and sync version to published 1.0.0
- Add contents:write permission to release workflow
- Update local version to match published v1.0.0 on crates.io
- Fix git push permissions for automated releases

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,10 @@ on:
         default: 'patch'
         type: string
 
+permissions:
+  contents: write
+  pull-requests: write
+
 env:
   CARGO_TERM_COLOR: always
 
